# bedrock-coord-cracker

./: .gitignore  Cargo.toml  nbt-to-macro.py
cpu/: Cargo.toml  build.rs
cpu/src/: main.rs  random.rs
gpu/: Cargo.toml
gpu/src/: legacy.rs  lib.rs
src/: main.rs
