[package]
name = "bedrock-coord-cracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
cust = "0.3.2"
rand_core = "0.6.4"
rand_xoshiro = "0.6.0"
getrandom = "0.2"
gpu_rand = "0.1.3"

[build-dependencies]
cuda_builder = "0.3.0"